# Quake-2

./: .gitignore  CMakeLists.txt  Q2.Notes.txt  sdl2.c  sdl2_gl1.c  sdl2_gl2.c  sdl2_gles2.c
baseq2/: config.cfg
baseq2/maps/: test_box.bsp  test_box.map
baseq2/ref_gl2/: generic_fs.glsl  lightmapped_fs.glsl  lightmapped_vs.glsl  unlit_fs.glsl  unlit_vs.glsl  vertexlit_fs.glsl  vertexlit_vs.glsl
client/: cl_input.c  snd_mix.c
game/: CMakeLists.txt  g_ai.c  g_local.h  g_monster.c  g_turret.c
linux/: net_udp.c
null/: vid_null.c
ref_gl/: CMakeLists.txt  gl_local.h  gl_model.c  gl_rmain.c  gl_rsurf.c  qgl.h
ref_gl2/: CMakeLists.txt  gl_draw.c  gl_image.c  gl_local.h  gl_material.c  gl_mesh.c  gl_model.c  gl_model.h  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_warp.c
ref_gles2/: CMakeLists.txt  MapModel.cpp  MapModel.h  README.md  Ref_C.cpp  Ref_C.h  Types_C.h  gl_draw.c  gl_image.c  gl_light.c  gl_local.h  gl_material.c  gl_mesh.c  gl_model.c  gl_model.h  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_warp.c
ref_soft/: CMakeLists.txt
sdlgame/: Engine.cpp  Engine.h  entity.c  mini.h  ott.h  sdlgame.cpp
win32/: libEGL.lib  libGLESv2.lib
